After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705664 - No more transparency gradient in app view [::]
No more transparency gradient in app view [::]
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: overview
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-08 11:58 UTC by Marco Scannadinari
Modified: 2013-08-11 16:20 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
st-scroll-view: Unconditionally allocate scrollbars (3.42 KB, patch)
2013-08-10 20:13 UTC, drago01
committed Details | Review

Description Marco Scannadinari 2013-08-08 11:58:45 UTC
there used to be a gradient at the top and bottom of the app view when scrolling up or down, where the apps would blur to the background, now (I assume after a recent update) the gradient is gone

I have a Sapphire AMD Radeon HD 6570 GPU w/ xf86-video-ati, ati-dri, libgl, and mesa installed, if that might be the problem
Comment 1 drago01 2013-08-10 09:20:56 UTC
Sounds like the shader failed to compile for a reason. 
Are they any erros printed to stderr?
Comment 2 Marco Scannadinari 2013-08-10 13:10:13 UTC
here is the output of `gnome-shell -r &` {
$ gnome-shell -r &
[1] 1693
[zheoffec@baguette16 ~]$       JS LOG: GNOME Shell started at Sat Aug 10 2013 14:04:58 GMT+0000 (UTC)
      JS LOG: loading default theme (Adwaita)
    JS ERROR: !!!   WARNING: 'anonymous function does not always return a value'
    JS ERROR: !!!   WARNING: file '/home/zheoffec/.local/share/gnome-shell/extensions/weather-extension@xeked.com/extension.js' line 578 exception 0 number 157
    JS ERROR: !!!   WARNING: 'anonymous function does not always return a value'
    JS ERROR: !!!   WARNING: file '/home/zheoffec/.local/share/gnome-shell/extensions/weather-extension@xeked.com/extension.js' line 995 exception 0 number 157
      JS LOG: Extension user-theme@gnome-shell-extensions.gcampax.github.com already installed in /home/zheoffec/.local/share/gnome-shell/extensions/user-theme@gnome-shell-extensions.gcampax.github.com. /usr/share/gnome-shell/extensions/user-theme@gnome-shell-extensions.gcampax.github.com will not be loaded

(process:1783): GLib-CRITICAL **: g_slice_set_config: assertion `sys_page_size == 0' failed
}

during that output i launched the app view, scrolled a bit, and opened firefox. It doesnt look like anything to do with shaders, just some gnome-shell-extensions stuff probably caused by gnome-tweak-tool, the last error was because of firefox
Comment 3 drago01 2013-08-10 19:26:59 UTC
OK, I can reproduce seems to be a regression caused by https://git.gnome.org/browse/gnome-shell/commit/?id=cfecd063c9ca3d18cdee0e57102bb644863484cf
Comment 4 drago01 2013-08-10 20:01:50 UTC
(In reply to comment #3)
> OK, I can reproduce seems to be a regression caused by
> https://git.gnome.org/browse/gnome-shell/commit/?id=cfecd063c9ca3d18cdee0e57102bb644863484cf

Ugh this patch has another bad side effect ... when the vertical policy is set to never in the scroll-view-testing.js test nothing gets drawn (not just the scrollbar but everything gets black).
Comment 5 drago01 2013-08-10 20:13:54 UTC
Created attachment 251274 [details] [review]
st-scroll-view: Unconditionally allocate scrollbars

Commit cfecd063c9ca3d18cd changed the allocation logic to not allocate
scrollbars when the *_visible booleans are false. This breaks the
fade effect as well as the NEVER policy. We do not paint scrollbars
when they are not supposed to be visible, so not allocating them
and thus leaving them in a "needs allocation" state just causes problems.

I am not convinced that it solved any problem to begin with (we don't paint
them anyway).

As the previous condition has basically always been true, just do it
unconditionally.
Comment 6 drago01 2013-08-11 16:19:22 UTC
Pushed after IRC review.

Attachment 251274 [details] pushed as cba5bca - st-scroll-view: Unconditionally allocate scrollbars
Comment 7 drago01 2013-08-11 16:20:36 UTC
Pushed to the 3.8 branch as well.